gitops/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-app-service
  namespace: node-app

spec:
  selector:
    app: node-app

  type: NodePort

  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
      nodePort: 30080
